@@ -742,5 +742,5 @@
     "*://html.onlineviewer.net/*",
     "*://webcache.googleusercontent.com/*"
   ],
-  "version": "3.1.6.7"
+  "version": "3.1.6.8"
 }
