@@ -224,6 +224,7 @@ function edit_options() {
     document.querySelector('input[data-key="amp_unhide"]').checked = (edit_site.amp_unhide > 0);
     document.querySelector('input[data-key="amp_redirect"]').value = edit_site.amp_redirect ? edit_site.amp_redirect : '';
     document.querySelector('input[data-key="ld_json"]').value = edit_site.ld_json ? edit_site.ld_json : '';
+    document.querySelector('input[data-key="ld_json_next"]').value = edit_site.ld_json_next ? edit_site.ld_json_next : '';
     document.querySelector('input[data-key="ld_google_webcache"]').value = edit_site.ld_google_webcache ? edit_site.ld_google_webcache : '';
     document.querySelector('input[data-key="add_ext_link"]').value = edit_site.add_ext_link ? edit_site.add_ext_link : '';
     document.querySelector('select[data-key="add_ext_link_type"]').selectedIndex = add_ext_link_type_options.indexOf(edit_site.add_ext_link_type);
@@ -296,6 +297,7 @@ function renderOptions() {
       'amp_unhide': 1,
       'amp_redirect': 0,
       'ld_json': 0,
+      'ld_json_next': 0,
       'ld_google_webcache': 0,
       'add_ext_link': 0,
       'add_ext_link_type': 0,
@@ -337,6 +339,7 @@ function renderOptions() {
             block_regex: '\\.example\\.com\\/js\\/',
             amp_redirect: 'div.paywall',
             ld_json: 'div.paywall|div.article',
+            ld_json_next: 'div.paywall|div.article',
             ld_google_webcache: 'div.paywall|div.article',
             add_ext_link: 'div.paywall|div.article',
             cs_code: 'for dev: check GitLab examples',
@@ -382,6 +385,7 @@ function renderOptions() {
       (sites_custom[key]['amp_unhide'] > 0 ? ' | amp_unhide' : '') +
       (sites_custom[key]['amp_redirect'] ? ' | amp_redirect' : '') +
       (sites_custom[key]['ld_json'] ? ' | ld_json' : '') +
+      (sites_custom[key]['ld_json_next'] ? ' | ld_json_next' : '') +
       (sites_custom[key]['ld_google_webcache'] ? ' | ld_google_webcache' : '') +
       (sites_custom[key]['add_ext_link'] && sites_custom[key]['add_ext_link_type'] ? ' | add_ext_link' : '') +
       (sites_custom[key]['cs_code'] ? ' | cs_code' : '');
